--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -250,16 +250,20 @@
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Goblin/11GO_Goblin_')">11 Goblin</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Ethereal/11ET_Ethereal_')">11 Ethereal</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Broker/11BO_Brokers_')">11 Brokers</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/WildElf/11WE_WildElf_')">11 WildElf</button> <br />
                                     </div>
                                     <div class="col-md-4">
-                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/12XP_')">12 Generic</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/12XP_')">12 Root</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Generic/12XP_Generic_')">12 Generic</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/PlayerHousing/12PH_')">12 Housing</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Elwynn/12ELW_Elwynn_')">12 Elwynn</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Durotar/12DUR_Durotar_')">12 Durotar</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/BloodElf/12BE_BloodElf_')">12 BloodElf</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Troll/12TR_Troll_')">12 Troll</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Void/12VD_Void_')">12 Void</button> <br />
-                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/WildElf/12WE_WildElf_')">12 WildElf</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Fungarian/12FN_Fungarian_')">12 Fungarian</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Primitive/12PM_Primitive_')">12 Primitive</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Rutaani/12RU_Rutaani_')">12 Rutaani</button> <br />
                                     </div>
                                     </div>
                             </div>
