/files, /extractFiles: implement ! operator for search

--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -126,6 +126,7 @@
                     <kbd>isplaceholder</kbd> for files with placeholder filenames<br />
                     <kbd>added:x.x.x.xxxxx|x.x.x.xxxxx</kbd> filter by files added between the given builds (requires both builds to have been loaded once so manifest exists)<br />
                     <kbd>in:x.x.x.xxxxx</kbd> filter by files present in a given build (requires build to have been loaded once so manifest exists)<br />
+                    <kbd>!xxxx</kbd> invert filter <kbd>xxxx</kbd><br />
                     <br />
                     <p>It is also possible to combine some of these options (but not others, it will complain) by separating them by a <kbd>,</kbd>. <br>Examples: <kbd>unnamed,type:wmo</kbd> <kbd>creature,type:m2</kbd></p>
                 </div>
