--- a/wwwroot/db/quests.html
+++ b/wwwroot/db/quests.html
@@ -1,1 +1,182 @@
-﻿
+﻿<!DOCTYPE html>
+<html data-bs-theme="dark">
+<head>
+    <title>WoW.tools</title>
+    <meta property='og:type' content='website'>
+    <meta property='og:site_name' content='WoW.tools'>
+    <meta property='og:title' content='WoW.tools'>
+    <meta property='og:image' content='/img/cogw.png'>
+    <meta property='twitter:image' content='/img/cogw.png'>
+    <meta property='twitter:card' content='summary'>
+    <meta property='twitter:site' content='@Marlamin'>
+    <meta name='application-name' content='WoW.tools'>
+    <meta name='apple-mobile-web-app-title' content='WoW.tools'>
+    <meta name='theme-color' content='#343a40'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="icon" type="image/png" href="/img/cogw.png" />
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="/css/font-awesome.min.css" />
+
+    <!-- JQuery -->
+    <script src="/js/jquery.min.js"></script>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <script src="/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Datatables -->
+    <link rel="stylesheet" type="text/css" href="/css/datatables.min.css" />
+    <script type="text/javascript" src="/js/datatables.min.js"></script>
+    <script src="/js/input.js" crossorigin="anonymous"></script>
+
+    <link href="/css/style.css?v=1661289414" rel="stylesheet">
+    <script type="text/javascript" src="/js/main.js"></script>
+    <script type="text/javascript" src="/js/tooltips.js"></script>
+    <script type="text/javascript" src="/js/anims.js"></script>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg" id="navbar"></nav>
+    <div class='container-fluid'>
+        <h3>Quests</h3>
+        <table class='table table-striped' id='quests'>
+            <thead><tr><th style='width: 100px'>ID</th><th>Name</th></tr>
+        </table>
+        <div id="quests_preview" style="display: block;"></div>
+    </div>
+    <script type='text/javascript'>
+        var Elements = {};
+
+        (function () {
+            var searchHash = location.hash.substr(1),
+                searchString = searchHash.substr(searchHash.indexOf('search=')).split('&')[0].split('=')[1];
+
+            if (searchString != undefined && searchString.length > 0) {
+                searchString = decodeURIComponent(searchString);
+            }
+
+            var page = (parseInt(searchHash.substr(searchHash.indexOf('page=')).split('&')[0].split('=')[1], 10) || 1) - 1;
+            var sortCol = searchHash.substr(searchHash.indexOf('sort=')).split('&')[0].split('=')[1];
+            if (!sortCol) {
+                sortCol = 0;
+            }
+
+            var sortDesc = searchHash.substr(searchHash.indexOf('desc=')).split('&')[0].split('=')[1];
+            if (!sortDesc) {
+                sortDesc = "asc";
+            }
+
+            Elements.table = $('#quests').DataTable({
+                "processing": true,
+                "serverSide": true,
+                "search": { "search": searchString },
+                "ajax": "/wdb/quests",
+                "pageLength": 25,
+                "displayStart": page * 25,
+                "autoWidth": false,
+                "orderMulti": false,
+                "ordering": false,
+                "searching": true,
+                "order": [[sortCol, sortDesc]]
+            });
+
+            $('#quests').on('draw.dt', function () {
+                var currentSearch = encodeURIComponent($("#dt-search-0").val());
+                var currentPage = $('#quests').DataTable().page() + 1;
+
+                var sort = $('#quests').DataTable().order();
+                var sortCol = sort[0][0];
+                var sortDir = sort[0][1];
+
+                var url = "search=" + currentSearch + "&page=" + currentPage + "&sort=" + sortCol + "&desc=" + sortDir;
+
+                window.location.hash = url;
+
+                $("[data-bs-toggle=popover]").popover();
+            });
+
+            $('#quests').on('click', 'tbody tr td', function () {
+                $("#quests_preview").html("Loading..");
+                var data = Elements.table.row($(this).parent()).data();
+                loadQuestInfo(data[0])
+                    .then(returnedData => {
+                        renderQuestInfo(data[0], returnedData); // JSON data parsed by `response.json()` call
+                    });
+
+                $(".selected").removeClass("selected");
+                $(this).parent().addClass('selected');
+            });
+        }());
+
+        async function loadQuestInfo(id) {
+            const response = await fetch("/wdb/quest?id=" + id, {
+                method: 'GET',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            });
+            return response.json();
+        }
+
+        function renderQuestInfo(id, info) {
+            let result = "";
+            let questInfo = info.Value;
+            console.log(info);
+            result += "<h2>" + info["Name[0]"];
+
+            if (info["Title"] != "") {
+                result += "<small>&lt;" + info['Title'] + "&gt;</small>"
+            }
+
+            result += " <a target='_BLANK' href='https://wowhead.com/quest=" + id + "' class='btn btn-sm align-middle btn-outline-primary'>Wowhead</a> ";
+            result += "<a target='_BLANK' href='https://wowdb.com/quests/" + id + "' class='btn btn-sm align-middle btn-outline-primary'>WoWDB</a></h2>";
+
+            result += "<table class='table table-sm table-striped table-hover' id='questInfoTable'></table></div>";
+
+            $("#quests_preview").html(result);
+
+            Object.keys(info).forEach(function (key) {
+                const val = info[key];
+                if (val != "") {
+                    $("#questInfoTable").append("<tr><td>" + key + "</td><td>" + val + "</td></tr>");
+                }
+
+            });
+        }
+        function locationHashChanged(event) {
+            var searchHash = location.hash.substr(1),
+                searchString = searchHash.substr(searchHash.indexOf('search=')).split('&')[0].split('=')[1];
+
+            if (searchString != undefined && searchString.length > 0) {
+                searchString = decodeURIComponent(searchString);
+            }
+
+            if ($("#quests_filter label input").val() != searchString) {
+                $('#quests').DataTable().search(searchString).draw(false);
+            }
+            var page = (parseInt(searchHash.substr(searchHash.indexOf('page=')).split('&')[0].split('=')[1], 10) || 1) - 1;
+            if ($('#quests').DataTable().page() != page) {
+                $('#quests').DataTable().page(page).draw(false);
+            }
+
+            var sortCol = searchHash.substr(searchHash.indexOf('sort=')).split('&')[0].split('=')[1];
+            if (!sortCol) {
+                sortCol = 0;
+            }
+
+            var sortDesc = searchHash.substr(searchHash.indexOf('desc=')).split('&')[0].split('=')[1];
+            if (!sortDesc) {
+                sortDesc = "asc";
+            }
+
+            var curSort = $('#quests').DataTable().order();
+            if (sortCol != curSort[0][0] || sortDesc != curSort[0][1]) {
+                $('#quests').DataTable().order([sortCol, sortDesc]).draw(false);
+            }
+        }
+
+        window.onhashchange = locationHashChanged;
+    </script>
+</body>
+</html>
