Add VoidElf prefix

--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -263,6 +263,7 @@
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/BloodElf/12BE_BloodElf_')">12 BloodElf</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Troll/12TR_Troll_')">12 Troll</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Void/12VD_Void_')">12 Void</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/VoidElf/12VE_VoidElf_')">12 VoidElf</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Fungarian/12FN_Fungarian_')">12 Fungarian</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Primitive/12PM_Primitive_')">12 Primitive</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Rutaani/12RU_Rutaani_')">12 Rutaani</button> <br />
