--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -267,6 +267,7 @@
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Fungarian/12FN_Fungarian_')">12 Fungarian</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Primitive/12PM_Primitive_')">12 Primitive</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Rutaani/12RU_Rutaani_')">12 Rutaani</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/TwilightsBlade/12TB_TwilightsBlade_')">12 Twilights Blade</button> <br />
                                     </div>
                                     </div>
                             </div>
@@ -417,11 +418,15 @@
                         "targets": 1,
                         "createdCell": function (td, cellData, rowData, row, col) {
                             if (!cellData) {
-                                if (!rowData[7]) {
+                                if (!rowData[7] || rowData[1].includes(rowData[0])) {
                                     $(td).css('background-color', '#ff585850');
                                 } else {
                                     $(td).css('background-color', '#673ab750');
                                 }
+                            }
+
+                            if (rowData[1].includes(rowData[0])) {
+                                $(td).css('background-color', '#ff585850');
                             }
                         },
                         "render": function (data, type, full, meta) {
@@ -510,7 +515,7 @@
 
                         var modelPreview = document.getElementById("modelPreview");
 
-                        if (name.endsWith(".m2")) {
+                        if (name == "" || name.endsWith(".m2")) {
                             modelPreview.innerHTML = "<iframe src='/mv/?filedataid=" + id + "&embed=true' style='width: 100%; height: 500px; border: none;'></iframe>";
                         } else if (name.endsWith(".wmo")) {
                             modelPreview.innerHTML = "<iframe src='/mv/?filedataid=" + id + "&type=wmo&embed=true' style='width: 100%; height: 500px; border: none;'></iframe>";
