Set page titles

--- a/wwwroot/dbc/diff.html
+++ b/wwwroot/dbc/diff.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html data-bs-theme="dark">
 <head>
-    <title>WoW.tools</title>
+    <title>WoW.tools - DBC Diff</title>
     <meta property='og:type' content='website'>
     <meta property='og:site_name' content='WoW.tools'>
     <meta property='og:title' content='WoW.tools'>
