--- a/wwwroot/mv/index.html
+++ b/wwwroot/mv/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html data-bs-theme="dark">
 <head>
-    <title>WoW.tools</title>
+    <title>WoW.tools - Modelviewer</title>
     <meta property='og:type' content='website'>
     <meta property='og:site_name' content='WoW.tools'>
     <meta property='og:title' content='WoW.tools'>
