--- a/wwwroot/mv/index.html
+++ b/wwwroot/mv/index.html
@@ -122,7 +122,7 @@
                     
                     <div class="tab-pane fade show active" id="textures" role="tabpanel" aria-labelledby="textures-tab">
                         <p>Changing the skin/displayID will reset these values. Changing values in this form will let you assign FileDataIDs of your choosing to a certain texture slot.</p>
-                        <form id='textureForm'></form>
+                        <form id='textureForm'><div id="textureRow" class="row"></div></form>
                         <button type="button" class="btn btn-primary" onclick="updateTextures();">Save</button>
                     </div>
                     <div class="tab-pane fade" id="geosets" role="tabpanel" aria-labelledby="geosets-tab">
