--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -188,7 +188,8 @@
             showFileLookup: false,
             showFileType: true,
             showFileBranch: true,
-            showFileTree: false
+            showFileTree: false,
+            previewTypes: ["ogg", "mp3", "blp", "wmo", "m2", "bls", "gfat", "lua", "txt", "srt", "toc", "hlsl", "m3", "adt"]
         }
 
         window.onkeydown = function (e) {
@@ -349,7 +350,6 @@
 
             var build = searchHash.substr(searchHash.indexOf('build=')).split('&')[0].split('=')[1];
 
-            var previewTypes = ["ogg", "mp3", "blp", "wmo", "m2", "bls", "gfat", "lua", "txt", "srt", "toc", "hlsl", "m3", "adt"];
 
             var table = $('#files').DataTable({
                 "processing": true,
@@ -558,13 +558,13 @@
                                 //if (full[3].length && full[3][0].enc != 1) {
 
                                 if ($("#files_preview").is(":visible")) {
-                                    if (previewTypes.includes(full[4]) && full[3] != "false") {
+                                    if (Settings.previewTypes.includes(full[4]) && full[3] != "false") {
                                         var test = "<a style='padding-top: 0px; padding-bottom: 0px; cursor: pointer' onClick='fillPreviewModal(\"\"," + full[0] + "\,\"" + full[4] + "\")'><i class='fa fa-eye'></i></a></td>";
                                     } else {
                                         var test = "<i class='fa fa-ban' style='opacity: 0.3'></i></td>";
                                     }
                                 } else {
-                                    if (previewTypes.includes(full[4]) && full[3] != "false") {
+                                    if (Settings.previewTypes.includes(full[4]) && full[3] != "false") {
                                         var test = "<a style='padding-top: 0px; padding-bottom: 0px; cursor: pointer' data-bs-toggle='modal' data-bs-target='#previewModal' onClick='fillPreviewModal(\"\"," + full[0] + "\,\"" + full[4] + "\")'><i class='fa fa-eye'></i></a></td>";
                                     } else {
                                         var test = "<i class='fa fa-ban' style='opacity: 0.3'></i></td>";
@@ -602,6 +602,16 @@
                 $("[data-bs-toggle=popover]").popover();
             });
 
+            $("#files").on('click', 'tbody tr td', function () {
+                if ($("#files_preview").is(":visible")) {
+                    var data = $('#files').DataTable().row($(this).parent()).data();
+                    if (Settings.previewTypes.includes(data[4])) {
+                        fillPreviewModal("", data[0], data[4]);
+                    }
+                    $(".selected").removeClass("selected");
+                    $(this).parent().addClass('selected');
+                }
+            });
         }());
 
         function copyResultsToClipboard() {
