WIP File Tagging

--- a/wwwroot/header.html
+++ b/wwwroot/header.html
@@ -38,6 +38,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navDropdown">
                     <a class="dropdown-item" href="/files/naming.html"><i class="fa fa-file-text" aria-hidden="true"></i> File naming</a>
+                    <a class="dropdown-item" href="/files/tagging.html"><i class="fa fa-tag" aria-hidden="true"></i> File tagging</a>
                     <a class="dropdown-item" href="/files/keyinfo.html"><i class="fa fa-key" aria-hidden="true"></i> TACT Keys</a>
                     <a class="dropdown-item" href="/files/install.html"><i class="fa fa-hdd-o" aria-hidden="true"></i> Install files</a>
                     <a class="dropdown-item" href="/dbc/scenescript.html"><i class="fa fa-forward" aria-hidden="true"></i> Scenescripts</a>
