--- a/wwwroot/files/tagging.html
+++ b/wwwroot/files/tagging.html
@@ -45,7 +45,7 @@
                 <button id="saveRepositoryButton" class="btn btn-success form-control" style="margin: 0px;">Save changes to disk</button>
             </div>
             <div class="col-md-8">
-                <div id="changeWarning" class="alert alert-warning" style="margin: 0px; padding: 5px; padding-left: 10px;height: 38px;">
+                <div id="changeWarning" class="alert alert-warning" style="display: none; margin: 0px; padding: 5px; padding-left: 10px;height: 38px;">
                     You have unsaved changes. Press the button on the left to save the changes to disk.
                 </div>
             </div>
@@ -56,7 +56,7 @@
         <br />
         <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item">
-                <a class="nav-link" id="tagging-tab" data-bs-toggle="tab" href="#tagging" role="tab" aria-controls="tagging" aria-selected="false">File Tagging</a>
+                <a class="nav-link" id="tagging-tab" data-bs-toggle="tab" href="#tagging" role="tab" aria-controls="tagging" aria-selected="false">Manual Tagging</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" id="manageTags-tab" data-bs-toggle="tab" href="#manageTags" role="tab" aria-controls="manageTags" aria-selected="false">Manage Tags</a>
