--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -268,6 +268,7 @@
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Primitive/12PM_Primitive_')">12 Primitive</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/Rutaani/12RU_Rutaani_')">12 Rutaani</button> <br />
                                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/TwilightsBlade/12TB_TwilightsBlade_')">12 Twilights Blade</button> <br />
+                                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion11/Doodads/ArmyofLight/12AL_ArmyofLight_')">12 Army of Light</button> <br />
                                     </div>
                                     </div>
                             </div>
