Maps: Add error if no tiles found

--- a/wwwroot/maps/index.html
+++ b/wwwroot/maps/index.html
@@ -79,6 +79,9 @@
                 <!-- <div style='font-size: 12px;'><input type='checkbox' name='worldmap' id='js-worldmap'> <label for="js-worldmap">World maps (large download!)</label></div> -->
                 <div style='font-size: 12px;'><input type='checkbox' name='mnam' id='js-mnam'> <label for="js-mnam">Map Anima (MNAM) data</label></div>
             </div>
+
+            <div id="js-notifs">
+            </div>
             <canvas id="map-canvas" width="1920" height="1080"></canvas>
     </div>
     <script type="text/javascript" src="/js/maps.js"></script>
