Maps: UI tweaks

--- a/wwwroot/maps/index.html
+++ b/wwwroot/maps/index.html
@@ -52,12 +52,11 @@
                 <div>
                     <select id="js-map-select" disabled></select>
                 </div>
-
-                <div style='font-size: 12px; margin-top: 5px'>
+<!--                <div style='font-size: 12px; margin-top: 5px'>
                     <b>Details for last click:</b><br>
                     Coord: <span id="clickedCoord">No click. :(</span><br>
                     Tile: <span id="clickedADT">No click. :(</span>
-                </div>
+                </div>-->
             </div>
 
             <div id="js-techbox" class="overlay techdetails">
