Add maps to menu

--- a/wwwroot/header.html
+++ b/wwwroot/header.html
@@ -32,6 +32,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/dbc/hotfixes.html"><i class="fa fa-fire-extinguisher" aria-hidden="true"></i> Hotfixes</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/maps/"><i class="fa fa-map" aria-hidden="true"></i> Maps</a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-cogs" aria-hidden="true"></i> Other
