--- a/wwwroot/maps/index.html
+++ b/wwwroot/maps/index.html
@@ -53,9 +53,9 @@
                 <select id="js-map-select" disabled></select>
             </div>
             <div style='font-size: 12px; margin-top: 5px'>
-                <b>Details for last click:</b><br>
                 Coord: <span id="clickedCoord">No click. :(</span><br>
-                Tile: <span id="clickedADT">No click. :(</span>
+                Tile: <span id="clickedADT">No click. :(</span><br />
+                <a href="#" target="_BLANK" id="modelviewerLink">Open viewer @ click (non-Midnight/small maps)</a>
             </div>
         </div>
 
