--- a/wwwroot/maps/index.html
+++ b/wwwroot/maps/index.html
@@ -35,8 +35,8 @@
     <script type="text/javascript" src="/js/main.js"></script>
     <script type="text/javascript" src="/js/tooltips.js"></script>
     <script type="text/javascript" src="/js/anims.js"></script>
-    <link href="/css/select2.min.css" rel="stylesheet" />
-    <script src="/js/select2.min.js"></script>
+    <link rel="stylesheet" href="/css/choices.min.css" />
+    <script type="text/javascript" src="/js/choices.min.js"></script>
 </head>
 <body>
     <link href="/css/maps.css" rel="stylesheet">
@@ -48,6 +48,13 @@
             <span class="icon-bar"></span>
         </button>
 
+        <div id="js-techbox" class="overlay techdetails">
+            Canvas center: <span id="canvasPosX">0</span> x <span id="canvasPosY">0</span><br />
+            Mouse pos: <span id="mousePosX">0</span> x <span id="mousePosY">0</span><br />
+            WoW pos: <span id="wowPosX">0</span> <span id="wowPosY">0</span> | <span id="adtPosX">0</span>_<span id="adtPosY">0</span><br />
+            Zoom: <span id="zoomLevel">0</span><br />
+        </div>
+
         <div id="js-sidebar" class="overlay sidebar">
             <div>
                 <select id="js-map-select" disabled></select>
@@ -57,13 +64,6 @@
                 Tile: <span id="clickedADT">No click. :(</span><br />
                 <a href="#" target="_BLANK" id="modelviewerLink">Open viewer @ click (non-Midnight/small maps)</a>
             </div>
-        </div>
-
-        <div id="js-techbox" class="overlay techdetails">
-            Canvas center: <span id="canvasPosX">0</span> x <span id="canvasPosY">0</span><br />
-            Mouse pos: <span id="mousePosX">0</span> x <span id="mousePosY">0</span><br />
-            WoW pos: <span id="wowPosX">0</span> <span id="wowPosY">0</span> | <span id="adtPosX">0</span>_<span id="adtPosY">0</span><br />
-            Zoom: <span id="zoomLevel">0</span><br />
         </div>
 
         <button id="js-layers-button" class="layerbutton closed">
