--- a/wwwroot/dbc/index.html
+++ b/wwwroot/dbc/index.html
@@ -35,6 +35,8 @@
     <script type="text/javascript" src="/js/main.js"></script>
     <script type="text/javascript" src="/js/tooltips.js"></script>
     <script type="text/javascript" src="/js/anims.js"></script>
+    <link rel="stylesheet" href="/css/choices.min.css" />
+    <script type="text/javascript" src="/js/choices.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg" id="navbar"></nav>
@@ -245,8 +247,6 @@
             </div>
         </div>
     </div>
-    <link href="/css/select2.min.css" rel="stylesheet" />
-    <script src="/js/select2.min.js"></script>
     <script src="/js/files.js" crossorigin="anonymous"></script>
     <script src="/js/flags.js"></script>
     <script src="/js/enums.js"></script>
@@ -566,6 +566,17 @@
                         fileFilter.appendChild(option);
                     });
 
+                    const choices = new Choices(document.getElementById("fileFilter"), {
+                        searchEnabled: true,
+                        searchChoices: true,
+                        searchFields: ['label', 'value'],
+                        searchResultLimit: 50,
+                        shouldSort: false,
+                        itemSelectText: '',
+                    });
+
+                    choices.enable();
+
                     updateDBDButton();
                 }).catch(function (error) {
                     console.log("An error occurred retrieving files: " + error);
@@ -679,7 +690,13 @@
                     }
                 });
 
-                $('#fkSearchField').select2({ theme: 'bootstrap-5' });
+                const choices = new Choices(document.getElementById("fkSearchField"), {
+                    searchEnabled: true,
+                    searchChoices: true,
+                    searchResultLimit: 50,
+                    shouldSort: false,
+                    itemSelectText: '',
+                });
             });
         }
 
@@ -1139,8 +1156,6 @@
         let currentParams = [];
 
         (async function () {
-            $('#fileFilter').select2({ theme: 'bootstrap-5' });
-            $('#lockedBuild').select2({ theme: 'bootstrap-5' });
             let vars = {};
             let parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function (m, key, value) {
                 if (value.includes('#')) {
@@ -1264,8 +1279,6 @@
                         option.text = file;
                         fkSearchDB.appendChild(option);
                     });
-
-                    $('#fkSearchDB').select2({ theme: 'bootstrap-5' });
                 }).catch(function (error) {
                     console.log("An error occurred retrieving files: " + error);
                 });
