Rename .wwf files to .pvdata

--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -165,7 +165,7 @@
                                 <option value="TerrainCubeMaps" selected>Terrain Cube Maps and liquids</option>
                                 <option value="VO" selected>NPC dialog (requires data profiler addon)</option>
                                 <option value="WMO" selected>WMO models</option>
-                                <option value="WWF" selected>WWF files</option>
+                                <option value="WWF" selected>.pvdata files (formerly WWF)</option>
                             </select>
                             <br>
                             <div class="form-check">
